--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ verify_ssl = true
 pytest = "*"
 
 [packages]
+numpy = "*"
+opencv-python = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
